# keystone

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_VIDEO_RUNBOOK.md  LICENSE  README.md  RELEASE.md  SECURITY.md  VIDEO_RECORDING.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  docker.yml  publish-python.yml  secret-scan.yml  ui-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pytest.ini  requirements.txt  test_api.py  test_approval_flow.py  test_approve_direct.py  test_auth.py  test_canary.py  test_db.py  test_debug.py  test_policy.py  test_preview.py  test_proof.py  test_routes.py  test_side_effect.py  test_simulator.py  test_slack_buttons.py
backend/app/: auth.py  db.py  main.py  models.py  rate_limit.py  slack.py
backend/app/connectors/: base.py  email_generic.py  servicenow_real.py  servicenow_sim.py
backend/app/engine/: breaker.py  canary.py  policy.py  preview.py  proof.py
backend/app/policies/: default_policy.yaml  email_policy.yaml  strict_policy.yaml
backend/app/routes/: access.py  actions.py  agents.py  approve.py  audit.py  auth.py  connections.py  db.py  policies.py  slack.py  stats.py  workspaces.py
backend/tests/: conftest.py  test_actions.py  test_approvals.py  test_health.py  test_proof.py
docs/: repo-audit.md
examples/actions/: README.md  email_send.json  servicenow_bulk_update.json  servicenow_p1_blocked.json
scripts/: release_check.py
scripts/dev/: README.md  approve_direct.py
sdk/: README.md  demo.py  demo_3min.py  demo_recording.py  investor_workflow_demo.py  launch_demo.py  onboarding_example.py  pyproject.toml  setup.py
sdk/action_marshall/: __init__.py  cli.py  client.py
sdk/action_marshall/adapters/: __init__.py  langchain.py
sdk/keystone/: __init__.py  client.py
sdk/tests/: conftest.py  test_action.py  test_adapter_import.py  test_cli.py  test_client.py  test_imports.py  test_wrap.py
ui/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
ui/src/app/: global.css  globals.css  layout.tsx  page.tsx
ui/src/app/actions/[id]/: page.tsx
ui/src/app/actions/[id]/proof/: page.tsx
ui/src/app/agents/: page.tsx
ui/src/app/agents/[id]/: page.tsx
ui/src/app/approvals/: page.tsx
ui/src/app/audit/: page.tsx
ui/src/app/audit/[id]/: page.tsx
ui/src/app/login/: page.tsx
ui/src/app/policies/: page.tsx
ui/src/app/systems/: page.tsx
ui/src/app/workspaces/: page.tsx
ui/src/app/workspaces/[id]/: page.tsx
ui/src/components/: ClientShell.tsx  Sidebar.tsx
ui/src/lib/: ThemeToggle.tsx  api.ts  auth.tsx  components.tsx  useAutoRefresh.tsx
website/: next.config.mjs  package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
